# nucleo-l073rz-test

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  README.md  stm32l0xx_hal_conf.h
src/: blinky.c  screen.c  screen.h  screen_ll.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c
